# jrt-controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SUPPORT.md  azure-pipeline.yaml  init_submodules.sh  setup_jrtc_env.sh
.github/workflows/: docker-build-and-test.yaml
cmake_modules/: CTestCustom.cmake
deploy/: azurelinux.Dockerfile  entrypoint.sh  jrtc-ctl.Dockerfile  ubuntu22_04.Dockerfile  ubuntu24_04.Dockerfile
docs/: containers.md  jrtctl.md  overview.md  streams.md  understand_advanced_app.md  understand_advanced_app_c.md  understand_advanced_app_py.md  understand_example_apps.md  understand_simple_app.md  understand_simple_app_c.md  understand_simple_app_py.md
git-hooks/: check-commit-message.sh  clang-format-pre-commit.sh  cppcheck-pre-commit.sh
helper_build_files/: build_all.sh  build_jrtc.sh  build_utils.sh  clang-format-check.sh  cppcheck.sh  integration_tests.sh  run-ctypesgen.sh  run_all_integration_tests.sh
jrtc_tests/: CMakeLists.txt
jrtc_tests/agent/: CMakeLists.txt  jrtc_agent_test.c
jrtc_tests/controller/: CMakeLists.txt  jrtc_controller_test.c
jrtc_tests/router/: CMakeLists.txt  jrtc_router_test.c
jrtc_tests/test_data/yaml/: invalid.yaml  valid.yaml  valid_env.yaml  valid_incomplete.yaml
jrtc_tests/unit_tests/: CMakeLists.txt  logginglevel_test.c  strcat_test.c  yaml_test.c
pipeline/: build-for-os.yaml  build-lib.yaml  build.yaml  cleanup.yaml  coverage-tests.yaml  doxygen.yaml  integration-tests.yaml  print-debug-info.yaml  setup-on-vm.yaml  standard-tests.yaml  submodules.yaml
sample_apps/: .gitignore
sample_apps/advanced_example/: Makefile  Readme.md  advanced_example1.c  advanced_example1.yaml  advanced_example2.c  advanced_example2.yaml  assert.sh  build.sh  load_app.sh  run.sh  run_decoder.sh  run_jrtc_container.sh  run_reverse_proxy.sh  run_simple_agent_ipc.sh  unload_app.sh
sample_apps/advanced_example_c/: Makefile  Readme.md  advanced_example1.c  advanced_example1.yaml  advanced_example2.c  advanced_example2.yaml  assert.sh  run.sh  run_jrtc.sh  run_jrtc_container.sh  unload_app.sh
sample_apps/advanced_example_py/: Makefile  Readme.md  advanced_example1.py  advanced_example1.yaml  advanced_example2.py  advanced_example2.yaml  assert.sh  load_app.sh  run.sh  run_simple_agent_ipc.sh  unload_app.sh
sample_apps/first_example/: Makefile  Readme.md  assert.sh  build.sh  deployment.yaml  first_example.c  load_app.sh  run.sh  run_decoder.sh  run_jrtc.sh  run_simple_agent_ipc.sh  test_config.yaml  unload_app.sh
sample_apps/first_example_c/: Makefile  Readme.md  deployment.yaml  first_example.c  load_app.sh  run.sh  run_jrtc.sh  run_simple_agent_ipc.sh  unload_app.sh
sample_apps/first_example_py/: Makefile  Readme.md  assert.sh  deployment.yaml  deployment2.yaml  first_example.py  load_app.sh  run.sh  run_jrtc.sh  run_jrtc_container.sh  run_reverse_proxy.sh  run_simple_agent_ipc.sh  second_example.py  test_module1.py  test_module2.py  unload_app.sh
sample_apps/two_python/: .gitignore  Readme.md  assert.sh  deployment.yaml  deployment2.yaml  first_example.py  load_app.sh  run.sh  run_decoder.sh  run_jrtc.sh  run_reverse_proxy.sh  run_simple_agent_ipc.sh  second_example.py  unload_app.sh
src/agent/: CMakeLists.txt  jrtc_agent.c  jrtc_agent.h  jrtc_agent_defs.h
src/controller/: CMakeLists.txt  jrtc.c  jrtc.h  jrtc_config.c  jrtc_config.h  jrtc_config.yaml  jrtc_config_int.h  jrtc_config_sample.yaml  jrtc_int.c  jrtc_int.h  jrtc_north_io_app.c  jrtc_sched.c  jrtc_sched.h  jrtc_shared_python_state.h  jrtc_yaml.c  jrtc_yaml.h  jrtc_yaml_int.h
src/logger/: CMakeLists.txt  jrtc_logging.c  jrtc_logging.h
src/pythonapp_loader/: CMakeLists.txt  jrtc_globals.c  jrtc_globals.h  jrtc_pythonapp_loader.c
src/rest_api_lib/: CMakeLists.txt  Cargo.toml  openapi.json
src/rest_api_lib/scripts/: fetch_openapi_json.sh
src/rest_api_lib/src/: jrtc_rest_server.h  lib.rs
src/router/: CMakeLists.txt  jrtc_router.c  jrtc_router.h  jrtc_router_app_api.h  jrtc_router_int.h
src/stream_id/: CMakeLists.txt  jrtc_router_bitmap.h  jrtc_router_stream_id.c  jrtc_router_stream_id.h  jrtc_router_stream_id_int.c  jrtc_router_stream_id_int.h  stream_id_hash.h
src/wrapper_apis/c/: CMakeLists.txt  jrtc_app.cpp  jrtc_app.h  jrtc_app.hpp
tools/jrtc-ctl/: .gitignore  CMakeLists.txt  README.md  clean.sh  docker_build_image.sh  generate.sh  go.mod  go.sum  main.go
tools/jrtc-ctl/cmd/app/: app.go
tools/jrtc-ctl/cmd/app/load/: load.go
tools/jrtc-ctl/cmd/app/unload/: unload.go
tools/jrtc-ctl/cmd/clicommon/: config.go  jbpf_config.go  jbpf_config_test.go  jbpf_options.go  options.go
tools/jrtc-ctl/cmd/decoder/: decoder.go
tools/jrtc-ctl/cmd/decoder/collectjson/: collect_json.go
tools/jrtc-ctl/cmd/decoder/load/: load.go
tools/jrtc-ctl/cmd/decoder/run/: run.go
tools/jrtc-ctl/cmd/decoder/unload/: unload.go
tools/jrtc-ctl/cmd/jbpf/: jbpf.go
tools/jrtc-ctl/cmd/jbpf/load/: load.go
tools/jrtc-ctl/cmd/jbpf/unload/: unload.go
tools/jrtc-ctl/cmd/load/: load.go
tools/jrtc-ctl/cmd/streamid/: streamid.go
tools/jrtc-ctl/cmd/unload/: unload.go
tools/jrtc-ctl/common/: file.go  funcs.go  hash.go  options.go
tools/jrtc-ctl/deploy/: Dockerfile  mariner-build.Dockerfile
tools/jrtc-ctl/genericdecoder/: decoderType.go  options.go
tools/jrtc-ctl/jrtcbindings/: constants.go  router_destination.go  router_stream_id.go  router_stream_id_helpers.go  router_stream_id_test.go
tools/jrtc-ctl/services/cache/: client.go  client_test.go  options.go  store.go
tools/jrtc-ctl/services/decoder/: client.go  client_options.go  dynamicdecoder.proto  options.go  serve_control.go  serve_data.go  serve_gateway.go  server.go  server_options.go
tools/jrtc-ctl/services/jbpf/: client.go  model.go  options.go
tools/jrtc-ctl/services/jrt-controller/: client.go  config.yaml  options.go  request.go
tools/jrtc-ctl/services/loganalytics/: README.md  client.go  options.go  uploader.go  uploader_options.go
tools/jrtc-ctl/services/udp/: options.go  server.go
tools/jrtc-ctl/tools/: tools.go
(+92 files in other folders)
