[package]
name = "rest_api_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = "0.6.0"
base64 = "0.22.1"
base64-bytes = "0.1.0"
chrono = "0.4.38"
json = "0.12.4"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
zerofrom = "=0.1.5"

[lib]
name = "jrtc_rest_api_lib"
crate-type = ["staticlib"]

